load("multistring_flag.bzl", "multistring_flag")
load("transistor.bzl", "dummy_rule", "transistor_rule")

platform(
    name = "x86_windows",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_32",
    ],
)

platform(
    name = "x64_windows",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "osx",
    constraint_values = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
)

multistring_flag(
    name = "target_platforms",
    build_setting_default = ["x64_windows"],
    values = [
        "x64_windows",
        "x86_windows",
        "osx",
        "linux",
    ],
)

multistring_flag(
    name = "flavors",
    build_setting_default = ["opt"],
    values = [
        "opt",
        "dbg",
    ],
)

dummy_rule(
    name = "dummy",
)

transistor_rule(
    name = "transistor",
    deps = ["dummy"],
)
